--- a/jvb.html
+++ b/jvb.html
@@ -921,16 +921,16 @@
                 <h5 class='date mb-0'>new gym</h5>
               </div>
               <div id='teams' class=" w-100 d-flex text-white justify-content-around align-items-center">
-                <h4 class="mb-0 team">JV B 2</h4>
+                <h4 class="mb-0 team">TIS (W)</h4>
                 <span class="vs pr-4">vs.</span>
-                <h4 class="mb-0 team">JV B 3</h4>
+                <h4 class="mb-0 team">AIS</h4>
               </div>
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 winner num">2</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 num">0</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -940,18 +940,18 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">22</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">second set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">20</h4>
                     </div>
                   <hr class='m-1'>
                 </div>
@@ -966,11 +966,11 @@
               </div>
               <hr class='m-1'>
               <div class="card-footer  text-white">
-                <div class=' d-none'>
-                  <h5 class="mb-0">winner:</h5>
-                  <h2 class="mb-0 team">TIS (B)</h3>
+                <div class=' '>
+                  <h5 class="mb-0 ">winner:</h5>
+                  <h2 class="mb-0 team">TIS (W)</h3>
                 </div>
-                <div class="placeholder team">
+                <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
                 </div>
               </div>
@@ -988,9 +988,9 @@
                 <h5 class='date mb-0'>outside 1</h5>
               </div>
               <div id='teams' class=" w-100 d-flex text-white justify-content-around align-items-center">
-                <h4 class="mb-0 team">L #51</h4>
+                <h4 class="mb-0 team">AST</h4>
                 <span class="vs ">vs.</span>
-                <h4 class="mb-0 team">L #52</h4>
+                <h4 class="mb-0 team">AIS</h4>
               </div>
               <div class="scores ">
                 <p class="mb-0 up">total</p>
@@ -1054,9 +1054,9 @@
                 <h5 class='date mb-0'>old gym</h5>
               </div>
               <div id='teams' class=" w-100 d-flex text-white justify-content-around align-items-center">
-                <h4 class="mb-0 team">W #51</h4>
+                <h4 class="mb-0 team">TIS (B)</h4>
                 <span class="vs ">vs.</span>
-                <h4 class="mb-0 team">W #52</h4>
+                <h4 class="mb-0 team">TIS (W)</h4>
               </div>
               <div class="scores ">
                 <p class="mb-0 up">total</p>
