--- a/varsityg.html
+++ b/varsityg.html
@@ -1061,9 +1061,9 @@
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 winner num">2</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 num">0</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -1073,18 +1073,18 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">11</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">second set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">9</h4>
                     </div>
                   <hr class='m-1'>
                 </div>
@@ -1099,11 +1099,11 @@
               </div>
               <hr class='m-1'>
               <div class="card-footer  text-white">
-                <div class=' d-none'>
+                <div class=' '>
                   <h5 class="mb-0">winner:</h5>
-                  <h2 class="mb-0 team">TIS (B)</h3>
+                  <h2 class="mb-0 team">AST</h3>
                 </div>
-                <div class="placeholder team">
+                <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
                 </div>
               </div>
@@ -1124,7 +1124,7 @@
                     </div>
                     <div class="card-footer  text-white">
                       <div >
-                        <h2 class="mb-0 team"></h3>
+                        <h2 class="mb-0 team">AST</h3>
                       </div>
                     </div>
                   </div>
@@ -1138,7 +1138,7 @@
                     </div>
                     <div class="card-footer  text-white">
                       <div >
-                        <h2 class="mb-0 team"></h3>
+                        <h2 class="mb-0 team">MKKT</h3>
                       </div>
                     </div>
                   </div>
