--- a/varsityb.html
+++ b/varsityb.html
@@ -1058,9 +1058,9 @@
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 winner num">2</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 num">0</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -1096,11 +1096,11 @@
               </div>
               <hr class='m-1'>
               <div class="card-footer  text-white">
-                <div class=' d-none'>
+                <div class=' '>
                   <h5 class="mb-0">winner:</h5>
                   <h2 class="mb-0 team">TIS (B)</h3>
                 </div>
-                <div class="placeholder team">
+                <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
                 </div>
               </div>
@@ -1122,7 +1122,7 @@
                     </div>
                     <div class="card-footer  text-white">
                       <div >
-                        <h2 class="mb-0 team"></h3>
+                        <h2 class="mb-0 team">AIS</h3>
                       </div>
                     </div>
                   </div>
@@ -1136,7 +1136,7 @@
                     </div>
                     <div class="card-footer  text-white">
                       <div >
-                        <h2 class="mb-0 team"></h3>
+                        <h2 class="mb-0 team">TIS (B)</h3>
                       </div>
                     </div>
                   </div>
