--- a/varsityb.html
+++ b/varsityb.html
@@ -1070,18 +1070,18 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">17</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">second set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">18</h4>
                     </div>
                   <hr class='m-1'>
                 </div>
@@ -1098,7 +1098,7 @@
               <div class="card-footer  text-white">
                 <div class=' '>
                   <h5 class="mb-0">winner:</h5>
-                  <h2 class="mb-0 team">TIS (B)</h3>
+                  <h2 class="mb-0 team">AIS</h3>
                 </div>
                 <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
